tests/paczka2/big_fuzzy/71163666.err
Error in line 8: 6nfK S937 2,0
Error in line 14: 6nfK S293 233,8
Error in line 21: 6nfK S937 8,7
Error in line 30: A346 S293 61,2
Error in line 28: uv72rS1 S937 96,1
Error in line 5: qWQtsIocwr A608 97,7
Error in line 35: uv72rS1 A608 52,5
Error in line 42: A346 S293 62,1
Error in line 37: qWQtsIocwr S293 75,5
Error in line 43: A346 A346 26,5
Error in line 49: P6r6U S293 73,1
Error in line 44: qWQtsIocwr A346 61,6
Error in line 55: 6nfK A608 51,80
Error in line 53: qWQtsIocwr A608 26,0
Error in line 51: uv72rS1 A608 65,3
Error in line 60: A346 A608 51,4
Error in line 65: ZFXbowG S293 74,8
Error in line 63: 6nfK A608 88,5
Error in line 73: A346 A346 30,7
Error in line 82: qWQtsIocwr S937 1,3
Error in line 92: P6r6U A346 26,7
Error in line 91: alK S937 6,5
Error in line 94: P6r6U A608 74,1
Error in line 93: 6nfK S293 49,8
Error in line 101: 6nfK A608 82,5
Error in line 117: 6nfK S293 0,3
Error in line 121: 6nfK S937 88,0
Error in line 111: uv72rS1 A608 106,4
Error in line 150: qWQtsIocwr S937 20,0
Error in line 164: ZFXbowG S937 40,9
Error in line 163: 6nfK S293 14,7
Error in line 162: alK A608 92,2
Error in line 181: uv72rS1 S937 94,5
Error in line 192: uv72rS1 S937 7,1
Error in line 178: alK A346 49,3
Error in line 193: uv72rS1 A608 9,6
Error in line 201: qWQtsIocwr S293 63,6
Error in line 203: qWQtsIocwr S937 74,8
Error in line 219: A346 A346 50,6
Error in line 231: uv72rS1 S2รถ3 25รถ,4
Error in line 227: uv72rS1 S293 92,3
Error in line 212: P6r6U A346 96,7
Error in line 239: P6r6U S293 444f5
Error in line 237: P6r6U S293 97,9
Error in line 242: P6r6U A346 78,1
Error in line 241: alK S937 55,2
Error in line 248: alK A346 -3,8
